fixing some bugs found on ketchup

--- a/cpp/makefile
+++ b/cpp/makefile
@@ -49,4 +49,6 @@ clean:
 	rm -f main_planar;
 	rm -f main_subelem;
 	rm -rf main.dSYM/;
+
+.PHONY: main main_subelem clean
 #=================================================
