adding periodic BCs and starting vol kernel

--- a/esdg_quadhex_cpp/makefile
+++ b/esdg_quadhex_cpp/makefile
@@ -25,17 +25,8 @@ sources = $(wildcard $(srcPath)/*.cpp)
 
 objects  = $(subst $(srcPath)/,$(objPath)/,$(sources:.cpp=.o))
 
-# curved elements with WADG (can also add heterogeneous)
 main: $(objects) $(headers) main.cpp
 	$(compiler) $(compilerFlags) -o main $(flags) $(objects) main.cpp $(paths) $(links)
-
-# planar elements with WADG for heterogeneous media
-main_subelem: $(objects) $(headers) main_subelem.cpp
-	$(compiler) $(compilerFlags) -o main_subelem $(flags) $(objects) main_subelem.cpp $(paths) $(links)
-
-# planar elements for piecewise constant media - can use Bernstein-Bezier
-main_planar:	$(objects) $(headers) main_planar.cpp
-	$(compiler) $(compilerFlags) -o main_planar $(flags) $(objects) main_planar.cpp $(paths) $(links)
 
 $(objPath)/%.o:$(srcPath)/%.cpp $(wildcard $(subst $(srcPath)/,$(incPath)/,$(<:.cpp=.hpp))) $(wildcard $(subst $(srcPath)/,$(incPath)/,$(<:.cpp=.tpp)))
 	$(compiler) $(compilerFlags) -o $@ $(flags) -c $(paths) $<
@@ -43,9 +34,7 @@ $(objPath)/%.o:$(srcPath)/%.cpp $(wildcard $(subst $(srcPath)/,$(incPath)/,$(<:.
 clean:
 	rm -f $(objPath)/*.o;
 	rm -f main;
-	rm -f main_planar;
-	rm -f main_subelem;
 	rm -rf main.dSYM/;
 
-.PHONY: main subelem planar clean
+.PHONY: main clean
 #=================================================
