--- a/esdg_quadhex_cpp/makefile
+++ b/esdg_quadhex_cpp/makefile
@@ -27,8 +27,13 @@ objects  = $(subst $(srcPath)/,$(objPath)/,$(sources:.cpp=.o))
 
 .PHONY: main2d clean
 
-main2d: $(objects) $(headers) main2d.cpp
+all: 2d 3d
+
+2d: $(objects) $(headers) main2d.cpp
 	$(compiler) $(compilerFlags) -o main2d $(flags) $(objects) main2d.cpp -L${OCCA_DIR}/lib $(paths) $(links)
+
+3d: $(objects) $(headers) main3d.cpp
+	$(compiler) $(compilerFlags) -o main3d $(flags) $(objects) main3d.cpp -L${OCCA_DIR}/lib $(paths) $(links)
 
 $(objPath)/%.o:$(srcPath)/%.cpp $(wildcard $(subst $(srcPath)/,$(incPath)/,$(<:.cpp=.hpp))) $(wildcard $(subst $(srcPath)/,$(incPath)/,$(<:.cpp=.tpp)))
 	$(compiler) $(compilerFlags) -o $@ $(flags) -c $(paths) $<
